fixed blob overflow, blob mobile click

--- a/src/styles/Blob.module.scss
+++ b/src/styles/Blob.module.scss
@@ -1,22 +1,24 @@
 .blobCanvas {
-  width: 300px;
-  height: 300px;
+  max-width: 375px;
+  height: 375px;
   margin: 0 auto;
-  margin-top: 24px;
+  margin-top: 110px;
 }
 
 @media (min-width: 790px) {
   .blobCanvas {
+    width: 375px;
     flex-direction: row;
     margin-left: 50px;
-    margin-right: 50px;
+    margin-right: 25px;
+    margin-top: 65px;
   }
 }
 
 @media (min-width: 950px) {
   .blobCanvas {
     flex-direction: row;
-    margin-left: 145px;
-    margin-right: 80px;
+    margin-left: 100px;
+    margin-right: 0px;
   }
 }
